<resources>
    <string name="app_name">IMC</string>
    <string name="app_altura">Altura:</string>
    <string name="app_cm">Cm</string>
    <string name="app_peso">Peso:</string>
    <string name="app_kg">Kg</string>
    <string name="app_calcular">Calcular</string>

    <string name="underweight">Abaixo do peso</string>
    <string name="normal">Peso normal</string>
    <string name="overweight">Sobrepeso</string>
    <string name="obesityI">Obesidade Grau I</string>
    <string name="obesityII">Obesidade Grau II</string>
    <string name="obesityIII">Obesidade Grau III</string>

</resources>